Revert "Added few Hidden Files"
This reverts commit 2d91bc28c740e2fc98b6247b41530ac0c687e66f.

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,13 @@ build/
 # Tailwind CSS
 .tailwindcss-debug.log
 .tailwindcss-plugins.log
+tailwind.config.js
+postcss.config.js
 
+# Shadow CSS
+.shadcn/
+.shadcnrc
+.shadcn.lock
 
 # Customized for Vite + TypeScript + React + Tailwind CSS + Shadow CSS
 .cache/
